# cis-4800-path-tracing-demo

./: .gitignore  CMakeLists.txt  README.md  demo  main.cpp
include/: Camera.h  Lighting.h  Model.h  Shader.h
include/glad/: glad.h
libs/glfw/: cmake_uninstall.cmake
src/: Camera.cpp  Lighting.cpp  Model.cpp  Shader.cpp  glad.c  main.cpp
src/shaders/: basic.glsl  path_tracer.glsl  phong_shading.glsl  tonemap.frag  tonemapper.glsl
